some correction in presentations

--- a/TELEOPERATION/Presentation/Presentation.tex
+++ b/TELEOPERATION/Presentation/Presentation.tex
@@ -13,6 +13,11 @@
 
 \usepackage{pgfplots}
 \usepgfplotslibrary{dateplot}
+\usepackage{fancybox}
+
+% If you want to usa fira sans font decomment the two following lines
+\setsansfont[BoldFont={Fira Sans}]{Fira Sans Light}
+\setmonofont{Fira Mono}
 
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
@@ -33,8 +38,8 @@
 % \date{\today}
 \date{}
 \author{Edoardo Ghini, Gianluca Cerilli, Giuseppe L'Erario}
-\institute{La Sapienza University}
-\titlegraphic{\hfill\includegraphics[height=1.5cm]{Images/SapienzaLogo}}
+\institute{Locomotion and haptic interfaces for VR exploration}
+\titlegraphic{\hfill\includegraphics[height=1.2cm]{Images/SapienzaLogo}}
 
 \begin{document}
 	
@@ -49,13 +54,24 @@
 
 \begin{frame}[fragile]{Problem statement}
 
-Application of one degree of freedom inertia-spring-damper system for \textbf{vibration suppression} in a bilateral control system.\\
-\bigskip
-System compliance for different input frequency controlled by the
-value of virtual elements (based on the cut-off frequencies and stiffness of the virtual spring).
+\begin{alertblock}{Goal \bigskip}
+	Development of a controller able to suppress the vibration and unwanted inputs in a bilateral control system.
+\end{alertblock}
+
+\begin{alertblock}{Idea \bigskip}
+	Application of one degree of freedom \textit{virtual }spring-damper system with an additional inertia.
+	
+	The disturbance suppression performances depend on the value of these virtual parameters, determined from the desired cut-off frequencies.
+\end{alertblock}
+
+
+%Application of one degree of freedom inertia-spring-damper system for \textbf{vibration suppression} in a bilateral control system.\\
+%\bigskip
+%System compliance for different input frequency controlled by the
+%value of virtual elements (based on the cut-off frequencies and stiffness of the virtual spring).
 
 \end{frame}
-\begin{frame}[fragile]{Motivation}
+\begin{frame}[fragile]{Goal of the teleoperation}
 
 \begin{enumerate}
 \item \textbf{Stability} of the closed loop system irrespective to the behaviour of the human and the environment
@@ -73,12 +89,11 @@ value of virtual elements (based on the cut-off frequencies and stiffness of the
 	\includegraphics[width=0.8\linewidth]{../reportTeleop/Images/spring_damper_inertia_system}
 	\end{figure}
 
-Position error based torque reflection to the operator at the
-master side.
+%Position error based torque reflection to the operator at the master side.
 	
 	\begin{list}{$ \circ $}{}
-		\item Real inertias: $ J_{m}, J_{s} $
-		\item Virtual inertias: $ J_{mv}, J_{sv} $
+		\item Real inertiae: $ J_{m}, J_{s} $
+		\item Virtual inertiae: $ J_{mv}, J_{sv} $
 		\item Virtual damper and spring: $ B_{v}, K_{v} $
 	\end{list}
 
@@ -91,34 +106,35 @@ master side.
 	\includegraphics[width=0.8\linewidth]{../reportTeleop/Images/Block_diagram}
 	\end{figure}
 
-Dynamics equations in frequency domain:
+Dynamics equations of the system:
 \begin{align*}
-	(J_m + J_{mv}) s^2 \theta_m + (B_v s + K_v) (\theta_m - \theta_s) &= \tau_m \\
-	(J_s + J_{sv}) s^2 \theta_s + (B_v s + K_v) (\theta_s - \theta_m) &= -\tau_s 
+(J_m + J_{mv})\ddot{\theta}_m + B_v (\dot{\theta}_m - \dot{\theta}_s) + K_v(\theta_m - \theta_s) &= \tau_m \\
+(J_s + J_{sv})\ddot{\theta}_s + B_v (\dot{\theta}_s - \dot{\theta}_m) + K_v(\theta_s - \theta_m) &= - \tau_s 
 \end{align*}
 	
 \end{frame}
 
-\section{System Analysis}
 
 \begin{frame}[fragile]{Bilateral Controller}
 
-External torques as action and reaction torque of human and environment impedance, $ Z_{h} $ and $ Z_{env} $:
+%External torques as action and reaction torque of human and environment impedance, $ Z_{h} $ and $ Z_{env} $:
+The virtual parameters are considered elements of the controller. Equations are rearranged:
 \begin{align*}
 	J_m s^2 \theta_m &= \tau_m - (B_v s + K_v) (\theta_m - \theta_s) - J_{mv} s^2 \theta_m \\
 	J_s s^2 \theta_s &= - \tau_s - (B_v s + K_v) (\theta_s - \theta_m) - J_{sv} s^2 \theta_s
 \end{align*}
+where the external torques are action and reaction forces of the human and the environment.
 
-System represented by 2$\times $2 hybrid matrix as:
+System represented by:
 
 \begin{equation*}
 \begin{bmatrix}
 \tau_m \\ \theta_s
 \end{bmatrix} = 
-\begin{bmatrix}
+\underbrace{\begin{bmatrix}
 H_{11} & H_{12} \\
 H_{21} & H_{22}
-\end{bmatrix}
+\end{bmatrix}}_{\text{\textit{Hybrid matrix}}}
 \begin{bmatrix}
 \theta_m \\ - \tau_s
 \end{bmatrix}
@@ -146,7 +162,7 @@ where:
 
 \begin{frame}{Bilateral Controller}
 
-\textit{Condition of transparency}: Trasmitted impedance $ Z_{t} $ transferred to the operator should be equal to environment impedance $ Z_{env} $:
+\textit{Condition of transparency}: trasmitted impedance $ Z_{t} $ transferred to the operator should be equal to environment impedance $ Z_{env} $:
 \begin{equation*}
 	\frac{\tau_m}{\theta_m} = Z_t = Z_{env} = \frac{\tau_s}{\theta_s}
 \end{equation*}
@@ -154,20 +170,23 @@ Relationship between $ Z_{t} $ and $ Z_{env} $:
 \begin{equation*}
 	Z_t = \big(\dfrac{-H_{12} H_{21}}{1 + H_{22} Z_{env}}\big)Z_{env} + H_{11}
 \end{equation*}
-Hybrid parameters for the perfect transparency condition, derived as:
-\begin{equation*}
-	\begin{bmatrix}
-	\tau_m \\ \theta_s
-	\end{bmatrix} = 
-	\begin{bmatrix}
-	0 & -1 \\ 1 & 0
-	\end{bmatrix}
-	\begin{bmatrix}
-	\theta_m \\ -\tau_s
-	\end{bmatrix}
-\end{equation*}
+
+%Hybrid parameters for the perfect transparency condition, derived as:
+%\begin{equation*}
+%	\begin{bmatrix}
+%	\tau_m \\ \theta_s
+%	\end{bmatrix} = 
+%	\begin{bmatrix}
+%	0 & -1 \\ 1 & 0
+%	\end{bmatrix}
+%	\begin{bmatrix}
+%	\theta_m \\ -\tau_s
+%	\end{bmatrix}
+%\end{equation*}
 
 \end{frame}
+
+%\section{System Analysis}
 
 \section{Vibration Suppression Design}
 
@@ -175,33 +194,40 @@ Hybrid parameters for the perfect transparency condition, derived as:
 
 Assume system disturbed by environment vibration noise.\\
 \bigskip
-Inspect $ H_{22} $ for the relationship of position response $ \theta^{res} $ and external torque input $ \tau_{ext} $:
+Inspect $ H_{22} $ for the relationship of position response $ \theta_s $ and external torque input $ \tau_{ext} $:
 \begin{equation*}
 	\dfrac{\theta_s}{\tau_{ext}} = \dfrac{1}{(J_s + J_{sv}) s^2 + B_v s + K_v}
 	\label{H_22}
 \end{equation*}\\
 \bigskip
-Virtual parameters $ J_{v}, B_{v} $ and $ K_{v} $ determined from the second-order characteristic equation:
+Virtual parameters $ J_{v}, B_{v} $ and $ K_{v} $ determined from the characteristic equation:
 \begin{equation*}
-	s^{2} + (g_{1} + g_{2})s + (g_{1}*g_{2}) = 0
+	s^{2} + (g_{1} + g_{2})s + (g_{1} \cdot g_{2}) = 0
 \end{equation*}
-established from two poles $ g_{1} $ and $ g_{2} $, representing the desired cut-off frequencies of the system for disturbance suppression.
+%established from two poles $ g_{1} $ and $ g_{2} $, representing the desired cut-off frequencies of the system for disturbance suppression.
+where the poles $ g_1 $ and $ g_2 $ represent the desired cut-off frequencies.
 
 \end{frame}
 
 \begin{frame}{Parameters Selection and Design}
 	
-Spring stiffness $ K_{v} $ influences the behaviour of the system.\\
+Spring stiffness $ K_{v} $ influences the transparency.\\
 \bigskip
-It regulates the \textit{compliance} of this, achieving \textbf{rigid coupling} (high spring stiffness) or \textbf{spring coupling} (low spring stiffness).\\
+It regulates the \textit{compliance} of the system, achieving \textbf{rigid coupling} (high spring stiffness) or \textbf{spring coupling} (low spring stiffness).\\
+\bigskip
+\pause
+{\centering
+\Ovalbox{We want to chose $ K_v $ beforehand!}\par}
+\pause
+
 \bigskip
 Virtual parameters $ B_{v} $ and $J_{v} $ computed according to $ K_{v} $:
 \begin{equation*}
-	B_v = \left(\frac{g_1 + g_2}{g_1*g_2}\right) K_v
+	B_v = \left(\frac{g_1 + g_2}{g_1 \cdot g_2}\right) K_v
 \end{equation*}
 and
 \begin{equation*}
-	J_{sv} = \left(\frac{1}{g_1*g_2}\right) K_v - J_s
+	J_{sv} = \left(\frac{1}{g_1 \cdot g_2}\right) K_v - J_s
 \end{equation*}
 
 \end{frame}	
@@ -212,6 +238,31 @@ and
 
 \section{Simulations}
 
+\begin{frame}{Simulation conditions}
+	Simulation are done in ideal condition:
+	\begin{itemize}
+		\item the communication between master and slave have no critical aspects;
+		\item instantaneous and loss-less signal transfer.
+	\end{itemize}
+	
+	We will compare two different settings:
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{c c c c}
+			\toprule
+			Behaviour & $K_{v}$ & $B_{v}$ &  $J_{v}$\\
+			\midrule 
+			\midrule 
+			Virtual compliance& $20.0 \ \frac{\text{N m}}{\text{rad}} $ & $4.4\cdot 10^{-1} \ \frac{\text{N m}}{\text{rad/s}}$ & $3\cdot 10^{-4} \ \text{kg m\textsuperscript{2}}$\\
+			Rigid coupling & $10^{2} \ \frac{\text{N m}}{\text{rad}} $ & $1.5\cdot 10^{-1} \ \frac{\text{N m}}{\text{rad/s}}$ & $ 0 \ \text{kg m\textsuperscript{2}} $\\
+			\bottomrule
+		\end{tabular}
+		\caption{Sets of chosen virtual parameters.}
+		\label{virtParams}
+	\end{table}
+
+\end{frame}
+
 \subsection*{Vibration Suppression Performances}
 \begin{frame}{Disturbance response}
 	
@@ -221,10 +272,10 @@ and
   \begin{center}
     \includegraphics[width=\textwidth, height=0.45\textwidth]{../reportTeleop/Images/bodo}\\
     \bigskip
-    \begin{tabular}{c|c c c c c}
-       & Set I & Set II & Set III & Set IV & Rigid coupling \\
+    \begin{tabular}{c|c c c c c c}
+       & Set I & Set II & Set III & Set IV & Rigid coupling & \\
       \midrule 
-	    $K_{v}$ & 20 & 10 & 5 & 2.5 & 100 \\
+	    $K_{v}$ & $ 20.0 $ & $ 10.0 $ & $ 5.0 $ & $ 2.5 $ & $ 100.0 $ & $ \frac{\text{N} \cdot \text{m}}{\text{rad}} $ \\
     \end{tabular}
   \end{center}
 
@@ -245,29 +296,129 @@ and
 
 \subsection*{Task execution performances}
 
-\begin{frame}{Task execution:  Free Motion}
-  \begin{columns}
-    \column{.75\textwidth}
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/rCoupFreeTot50htznoise}\\
-    \smallskip
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/set20freeTot50Htznoise}
-    \column{.30\textwidth}
+%\begin{frame}{Task execution:  Free Motion}
+%  \begin{columns}
+%    \column{.75\textwidth}
+%    \includegraphics[width=\textwidth,
+%    height=0.45\textwidth]{../reportTeleop/Images/rCoupFreeTot50htznoise}\\
+%    \smallskip
+%    \includegraphics[width=\textwidth,
+%    height=0.45\textwidth]{../reportTeleop/Images/set20freeTot50Htznoise}
+%    \column{.30\textwidth}
+%
+%    \textbf{Rigid coupling}:\\
+%    \begin{itemize}
+%    \item{High transparency}
+%    \item{A lot of vibrations}
+%    \end{itemize}
+%    \smallskip
+%
+%    \textbf{Virtual compliance}:\\
+%    \begin{itemize}
+%    \item{ A bit less \textsl{responsive}}
+%    \item{\textsl{Smoother} (vibrations damped)}
+%    \end{itemize}
+%  \end{columns}
+%\end{frame}
 
-    \textbf{Rigid coupling}:\\
-    \begin{itemize}
-    \item{High transparency}
-    \item{A lot of vibrations}
-    \end{itemize}
-    \smallskip
+\begin{frame}{Free Motion: High frequency noise}
+\smallskip
+\begin{columns}
+	\column{.20\textwidth}
+	\color{Orange}\textbf{Rigid coupling:}\\
+	\bigskip
+	\bigskip
+	\bigskip
+	\color{black}\textbf{High frequency:} 50 Hz\\
+	\bigskip
+	\bigskip
+	\bigskip
+	\color{LightBlue}\textbf{Virtual compliance:}\\
+	
+	\column{.85\textwidth}
+	
+	\includegraphics[width=\textwidth,
+	height=0.45\textwidth]{../reportTeleop/Images/rCoupFreeTot50htznoiseRect}\\
+	\smallskip
+	\includegraphics[width=\textwidth,
+	height=0.45\textwidth]{../reportTeleop/Images/set20freeTot50HtznoiseRect}
+\end{columns}
 
-    \textbf{Virtual compliance}:\\
-    \begin{itemize}
-    \item{ A bit less \textsl{responsive}}
-    \item{\textsl{Smoother} (vibrations damped)}
-    \end{itemize}
-  \end{columns}
+\end{frame}
+
+\begin{frame}{Free Motion: High frequency noise}
+\smallskip
+\begin{columns}
+\column{.20\textwidth}
+\color{Orange}\textbf{Rigid coupling:}\\
+\bigskip
+\bigskip
+\bigskip
+\color{black}\textbf{High frequency:} 50 Hz\\
+\bigskip
+\bigskip
+\bigskip
+\color{LightBlue}\textbf{Virtual compliance:}\\
+
+\column{.85\textwidth}
+
+\includegraphics[width=\textwidth,
+height=0.45\textwidth]{../reportTeleop/Images/rCoupFree50htznoise}\\
+\smallskip
+\includegraphics[width=\textwidth,
+height=0.45\textwidth]{../reportTeleop/Images/set20freePart50Htznoise}
+\end{columns}
+
+
+\end{frame}
+
+\begin{frame}{Free Motion: Low frequency noise 20 Hz}
+\smallskip
+\begin{columns}
+	\column{.20\textwidth}
+	\color{Orange}\textbf{Rigid coupling:}\\
+	\bigskip
+	\bigskip
+	\bigskip
+	\color{black}\textbf{Low frequency:} 20 Hz\\
+	\bigskip
+	\bigskip
+	\bigskip
+	\color{LightBlue}\textbf{Virtual compliance:}\\
+	
+	\column{.85\textwidth}
+	
+	\includegraphics[width=\textwidth,
+	height=0.45\textwidth]{../reportTeleop/Images/freerigidTot20HtznoiseRect}\\
+	\smallskip
+	\includegraphics[width=\textwidth,
+	height=0.45\textwidth]{../reportTeleop/Images/freeSet20Tot20HtznoiseRect}
+\end{columns}
+
+\end{frame}
+
+\begin{frame}{Free Motion: Low frequency noise 20 Hz}
+\smallskip
+\begin{columns}
+\column{.20\textwidth}
+\color{Orange}\textbf{Rigid coupling:}\\
+\bigskip
+\bigskip
+\bigskip
+\color{black}\textbf{Low frequency:} 20 Hz\\
+\bigskip
+\bigskip
+\bigskip
+\color{LightBlue}\textbf{Virtual compliance:}\\
+
+\column{.85\textwidth}
+
+\includegraphics[width=\textwidth,
+height=0.45\textwidth]{../reportTeleop/Images/freerigidPart20Htznoise}\\
+\smallskip
+\includegraphics[width=\textwidth,
+height=0.45\textwidth]{../reportTeleop/Images/freeSet20Part20Htznoise}
+\end{columns}
 \end{frame}
 
 \begin{frame}{Task execution: In contact}
@@ -275,7 +426,7 @@ and
   \begin{columns}
     \column{.20\textwidth}
     \color{Orange}\textbf{Rigid coupling:}\\
-    lower error (good)\\
+    lower error \\
     \bigskip
     \bigskip
     \bigskip
@@ -284,7 +435,7 @@ and
     \bigskip
     \bigskip
     \color{LightBlue}\textbf{Virtual compliance:}\\
-    higher error (bad)
+    higher error
 
     \column{.85\textwidth}
     \includegraphics[width=\textwidth,
@@ -301,16 +452,12 @@ and
   \begin{columns}
     \column{.20\textwidth}
     \color{Orange}\textbf{Rigid coupling:}\\
-    higher effort (bad)\\
+    higher torque noise\\
     \bigskip
-    \bigskip
-    \color{black}\textbf{Control effort:}\\
-    \textsl{torque exerted}\\
     \bigskip
     \bigskip
     \color{LightBlue}\textbf{Virtual compliance:}\\
-    lower effort (good)
-
+    lower torque noise
     \column{.85\textwidth}
     \includegraphics[width=\textwidth,
     height=0.43\textwidth]{../reportTeleop/Images/rigidContactReacTorArrow}
@@ -323,40 +470,38 @@ and
 
 
 \begin{frame}{Task execution: In contact}
-  \begin{center}
-    \movie[height = 0.6\textwidth, width = 0.72\textwidth]{}{./teleOp.mov}
-  \end{center}
-  \begin{columns}
-    \column{.33\textwidth}
-    \textbf{Legend:}
-    \column{.33\textwidth}
-    \color{LightBlue} Tangential velocity
-    \column{.33\textwidth}
-    \color{Orange} Torque
-  \end{columns}
+
+Qui ci sta il film.
+%  \begin{center}
+%    \movie[height = 0.6\textwidth, width = 0.72\textwidth]{}{./teleOp.mov}
+%  \end{center}
+%  \begin{columns}
+%    \column{.33\textwidth}
+%    \textbf{Legend:}
+%    \column{.33\textwidth}
+%    \color{LightBlue} Tangential velocity
+%    \column{.33\textwidth}
+%    \color{Orange} Torque
+%  \end{columns}
 \end{frame}
 
-\section{Conclusion}
+\section{Conclusions}
 
 \begin{frame}{Conclusions}
 
   \textbf{Proposed solution:} 
   \begin{itemize}
-  \item
-    Inertia spring-dumper \textbf{virtual} system to augment the original system.
-  \item 
-    Having chosen a virtual \textbf{stiffness}, desired \textbf{cut-off} frequencies can be imposed
-    to the original system.
+  \item based on \textbf{virtual} spring-dumper system with additional inertia;
+  \item desired \textbf{cut-off} frequencies obtained regulating the \textbf{virtual} spring stiffness.
   \end{itemize}
 
   \textbf{Consequences:} 
   \begin{itemize}
-  \item
-    It shows a \textbf{trade-off} between control effort and tracking error in
-    task execution.
-  \item
-    Rejects high frequency signals, namely \textbf{noise} and preserves low frequency ones
-    like \textbf{control inputs}.
+  \item the proposed controller preserves the useful (\textsl{low}) frequency inputs and reject the noisy ones (\textsl{high}). 
+%    It shows a \textbf{trade-off} between control effort and tracking error in
+%    task execution.
+  \item In contact motion it leads to a position gap between master and slave. It can be used only in \textbf{soft material handling} tasks.
+%    Rejects high frequency signals, namely \textbf{noise} and preserves low frequency ones like \textbf{control inputs}.
   \end{itemize}
 \end{frame}
 
@@ -369,104 +514,6 @@ Thank you for your attention!
 
 \appendix
 
-\begin{frame}{Free Motion: High frequency noise}
-  \smallskip
-  \begin{columns}
-    \column{.20\textwidth}
-    \color{Orange}\textbf{Rigid coupling:}\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{black}\textbf{High frequency:} 50 Hz\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{LightBlue}\textbf{Virtual compliance:}\\
 
-    \column{.85\textwidth}
- 
-   \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/rCoupFreeTot50htznoiseRect}\\
-    \smallskip
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/set20freeTot50HtznoiseRect}
-    \end{columns}
-  
-\end{frame}
-
-\begin{frame}{Free Motion: High frequency noise. Detail}
-  \smallskip
-  \begin{columns}
-    \column{.20\textwidth}
-    \color{Orange}\textbf{Rigid coupling:}\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{black}\textbf{High frequency:} 50 Hz\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{LightBlue}\textbf{Virtual compliance:}\\
-
-    \column{.85\textwidth}
- 
-   \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/rCoupFree50htznoise}\\
-    \smallskip
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/set20freePart50Htznoise}
-    \end{columns}
-  
-
-\end{frame}
-
-\begin{frame}{Free Motion: Low frequency noise 20 Hz}
-  \smallskip
-  \begin{columns}
-    \column{.20\textwidth}
-    \color{Orange}\textbf{Rigid coupling:}\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{black}\textbf{Low frequency:} 20 Hz\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{LightBlue}\textbf{Virtual compliance:}\\
-
-    \column{.85\textwidth}
-    
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/freerigidTot20HtznoiseRect}\\
-    \smallskip
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/freeSet20Tot20HtznoiseRect}
-  \end{columns}
-  
-\end{frame}
-
-\begin{frame}{Free Motion: Low frequency noise 20 Hz detail}
-  \smallskip
-  \begin{columns}
-    \column{.20\textwidth}
-    \color{Orange}\textbf{Rigid coupling:}\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{black}\textbf{Low frequency:} 20 Hz\\
-    \bigskip
-    \bigskip
-    \bigskip
-    \color{LightBlue}\textbf{Virtual compliance:}\\
-
-    \column{.85\textwidth}
-    
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/freerigidPart20Htznoise}\\
-    \smallskip
-    \includegraphics[width=\textwidth,
-    height=0.45\textwidth]{../reportTeleop/Images/freeSet20Part20Htznoise}
-  \end{columns}
-\end{frame}
 
 \end{document}
