--- a/TELEOPERATION/Presentation/Presentation.tex
+++ b/TELEOPERATION/Presentation/Presentation.tex
@@ -269,15 +269,22 @@ and
   \begin{equation*}
     \dfrac{\theta_s}{\tau_{ext}} = \dfrac{1}{(J_s + J_{sv}) s^2 + B_v s + K_v}
   \end{equation*}\\
-  \begin{center}
-    \includegraphics[width=\textwidth, height=0.45\textwidth]{../reportTeleop/Images/bodo}\\
-    \bigskip
-    \begin{tabular}{c|c c c c c c}
-       & Set I & Set II & Set III & Set IV & Rigid coupling & \\
-      \midrule 
-	    $K_{v}$ & $ 20.0 $ & $ 10.0 $ & $ 5.0 $ & $ 2.5 $ & $ 100.0 $ & $ \frac{\text{N} \cdot \text{m}}{\text{rad}} $ \\
-    \end{tabular}
-  \end{center}
+  \begin{figure}
+  	\centering
+  	\includegraphics[width=1\linewidth]{Images/bodeplot2}
+%  	\caption{}
+%  	\label{fig:bodeplot2}
+  \end{figure}
+  
+%  \begin{center}
+%    \includegraphics[width=\textwidth, height=0.45\textwidth]{../reportTeleop/Images/bodeplot2}\\
+%    \bigskip
+%    \begin{tabular}{c|c c c c c c}
+%       & Set I & Set II & Set III & Set IV & Rigid coupling & \\
+%      \midrule 
+%	    $K_{v}$ & $ 20.0 $ & $ 10.0 $ & $ 5.0 $ & $ 2.5 $ & $ 100.0 $ & $ \frac{\text{N} \cdot \text{m}}{\text{rad}} $ \\
+%    \end{tabular}
+%  \end{center}
 
 \end{frame}
 
