QUADROTOR finished my third of the presentation, that involves simulations and conclusions

--- a/QUADROTOR_FAILURE/presentation/Presentation.tex
+++ b/QUADROTOR_FAILURE/presentation/Presentation.tex
@@ -16,8 +16,22 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-\setsansfont[BoldFont={Fira Sans}]{Fira Sans Light}
-\setmonofont{Fira Mono}
+\definecolor{Orange}{HTML}{cc3300}
+\definecolor{LightBlue}{HTML}{237FD4}
+
+\definecolor{Purple}{HTML}{911146}
+\definecolor{White}{HTML}{FFFFFF}
+\definecolor{Black}{HTML}{000000}
+\definecolor{Gray}{HTML}{F2F2F2}
+\definecolor{Sapienza}{HTML}{640c18}
+\setbeamercolor{alerted text}{fg=LightBlue,bg=White}
+\setbeamercolor{frametitle}{bg=Sapienza,fg=White}
+\setbeamercolor{background canvas}{bg=White}
+
+
+
+% \setsansfont[BoldFont={Fira Sans}]{Fira Sans Light}
+% \setmonofont{Fira Mono}
 
 %\usepackage[bold-style=ISO]{unicode-math}                    
 %\setmathfont{Latin Modern Math}
