QUADROTOR small corrections on the presentation before the discussion

--- a/QUADROTOR_FAILURE/presentation/edoardo.tex
+++ b/QUADROTOR_FAILURE/presentation/edoardo.tex
@@ -95,12 +95,12 @@
       \toprule
         Variable & Value & Description \\
         \midrule 
-        $x_1$  & $0$ rad & $\phi$ \\
-        $x_2$  & $0$ rad & $\theta$ \\
-        $x_3$  & $0$ rad & $\psi$ \\
-        $x_4$  & $0$ rad/s & $p$ \\
-        $x_5$  & $0$ rad/s & $q$ \\
-        $x_6$  & $mgd/k_r$ rad/s & $r$ \\
+        $x_1$  & $-\pi/4$ rad & $\phi$ \\
+        $x_2$  & $\pi/4$ rad & $\theta$ \\
+        $x_3$  & $\pi/4$ rad & $\psi$ \\
+        $x_4$  & $-0.5$ rad/s & $p$ \\
+        $x_5$  & $0.5$ rad/s & $q$ \\
+        $x_6$  & $2.7$ rad/s & $r$ \\
         \bottomrule
       \end{tabular}
     \column{.4\textwidth}
@@ -110,12 +110,12 @@
         \toprule
         Variable & Value \\
         \midrule 
-        $x_1$  & $-\pi/4$ rad \\
-        $x_2$  & $\pi/4$ rad \\
-        $x_3$  & $\pi/4$ rad \\
-        $x_4$  & $-0.5$ rad/s \\
-        $x_5$  & $0.5$ rad/s \\
-        $x_6$  & $2.7$ rad/s \\
+        $x_1$  & $0$ rad \\
+        $x_2$  & $0$ rad \\
+        $x_3$  & $0$ rad \\
+        $x_4$  & $0$ rad/s \\
+        $x_5$  & $0$ rad/s \\
+        $x_6$  & $mgd/k_r$ rad/s \\
         \bottomrule
      \end{tabular}
   \end{columns}
