--- a/QUADROTOR_FAILURE/presentation/giuseppe.tex
+++ b/QUADROTOR_FAILURE/presentation/giuseppe.tex
@@ -212,7 +212,7 @@
 	
 	\begin{block}{State vector:}
 		\begin{equation}
-		\hat{x} = [ \ \hat{x}_1 \quad \hat{x}_2 \quad \hat{x}_3 \quad \hat{x}_4 \quad \hat{x}_5 \ ] = \Big[ \ x_1 \quad x_1 \quad x_2 \quad x_3 \quad x_4 \quad (x_6-\dfrac{mgd}{k_r}) \ \Big]	
+		\hat{x} = [ \ \hat{x}_1 \quad \hat{x}_2 \quad \hat{x}_3 \quad \hat{x}_4 \quad \hat{x}_5 \ ] = \Big[ \ x_1 \quad x_2 \quad x_4 \quad x_5 \quad (x_6-\dfrac{mgd}{k_r}) \ \Big]	
 		\end{equation}
 	\end{block}
 
@@ -231,7 +231,7 @@
 	\end{align}
 	where:
 	\begin{columns}
-	\column{0.55\textwidth}
+	\column{0.6\textwidth}
 	\begin{equation*}
 	\hat{f}(\hat{x})=
 	\begin{bmatrix}
