--- a/QUADROTOR_FAILURE/presentation/gianluca.tex
+++ b/QUADROTOR_FAILURE/presentation/gianluca.tex
@@ -121,7 +121,7 @@ f_1 \\ f_2 \\ f_3 \\ f_4
 \end{equation}
 where
 \begin{itemize}
-\item \textit{d} = ration between drag and thrust coefficient of the rotor, $ m $
+\item \textit{d} = ratio between drag and thrust coefficient of the rotor, $ m $
 \item \textit{l} = arm length, $ m $
 \end{itemize}
 
